@@ -3,6 +3,7 @@ v X.XX
 New: Exercise PEE.T21, eigenvalue proof two ways
 New: Exercise VS.T31, alternate proof of Theorem AISM
 New: Theorem SIIS, intersection of subspaces
+New: Definition SOS, Theorem SSIS, sum of subspaces
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
 Edit: Exercise IVLT.T15, streamline solution
